# ferrotype

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  MIGRATION.md  SPEC_COVERAGE.md
examples/: codegen-condensed.toml  custom_pipeline.rs  petstore.rs  petstore_tree.rs  petstore_tree_condensed.rs  sabre_booking.rs  sabre_booking_tree.rs
examples/generated_tree/petstore/: mod.rs
examples/generated_tree/petstore/create_pet/: mod.rs  request.rs
examples/generated_tree/petstore_condensed/: mod.rs  support.rs
examples/generated_tree/sabre_booking/: mod.rs
examples/generated_tree/sabre_booking_client/: mod.rs
specs/: petstore.yaml
specs/sabre-booking/patches/: 001-flighttickets-optional-coupons.yaml
src/: condense.rs  config.rs  decorate.rs  generate.rs  idents.rs  lib.rs  load.rs  lower.rs  main.rs  mappings.rs  modules.rs  overrides.rs  partition.rs  pipeline.rs  postprocess.rs  profile.rs  render.rs  rules.rs  tree.rs  verify.rs
src/client/: auth.rs  emit.rs  mod.rs  plan.rs  support.rs
src/ir/: emit.rs  lower.rs  mod.rs  passes.rs
src/spec/: mod.rs  operations.rs  schema.rs
tests/: client.rs  emit_style.rs  goldens.rs  ir_unit.rs  parity.rs  patch_config.rs  pipeline.rs  real_world.rs  rules.rs  spec_model.rs  type_mapping.rs
tests/fixtures/real_world/: github__full-repository.json  github__issue.json  github__license-content.json  github__public-user.json  github__rate-limit-overview.json  stripe__balance.json  stripe__coupon.json  stripe__customer.json  stripe__product.json  stripe__refund.json  stripe__token.json
(+49 files in other folders)
