[package]
name = "openapi-codegen"
version = "0.1.0"
edition = "2024"
description = "Generate ergonomic Rust types from OpenAPI specs using the typify fork"

[lib]
doctest = false

[[bin]]
name = "openapi-codegen"
path = "src/main.rs"

[features]
default = []
# Opt-in `schemars::JsonSchema` derives on generated example types. The
# generated code only references schemars inside
# `#[cfg_attr(feature = "schemars", ...)]` attributes; the schemars crate
# itself is always a dependency (typify's schema API is built on it).
schemars = []

[dependencies]
# The local typify fork; the whole point of this crate is to exercise it.
typify = { path = "../typify/typify" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
json-patch = "4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
# typify's public API is built on schemars 0.8 (`RootSchema`); the same
# version also backs the cfg-gated `schemars::JsonSchema` derives in
# generated example code.
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "extra-traits"] }

# Runtime deps of the generated example code (compiled via `examples/`).
serde_with = "3"
struct-patch = { version = "0.10", default-features = false, features = [
    "status",
    "op",
    "nesting",
    "none_as_default",
] }
toml = "1.1.2"
unicode-ident = "1.0.24"
